fix overflow issue with white space on right side on mobile

--- a/src/assets/scss/now-ui-kit/_sections.scss
+++ b/src/assets/scss/now-ui-kit/_sections.scss
@@ -1,4 +1,5 @@
-body {
+html, body {
+  max-width: 100vw;
   overflow-x: hidden;
 }
 
